--- a/AFVLib/default.target.properties
+++ b/AFVLib/default.target.properties
@@ -10,5 +10,5 @@ debugTransport=dt_socket
 %%LDAP_TARGET_NAME%%=Ldap
 %%LDAP_USERS_OU%%=ou=notpeople,dc=sailpoint, dc=sp
 %%LDAP_TOP_LEVEL_DN%%=ou=notpeople,dc=sailpoint, dc=sp
-%%LDAP_CN_SOURCE_FIELD%%=uid
 %%LDAP_SEARCH_DN%%=ou=people,dc=sailpoint, dc=sp
+%%LDAP_CN_FORMAT%%=firstname[1]+'.'+lastname
